# descriptor-mapping

./: Cargo.toml  build.rs
proto/: lotus.proto
src/: lib.rs  lotus.rs  proto.rs  utils.rs
src/proto/: lotus.rs  mod.rs
