[package]
name = "descriptor-mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bytes = "1.6.0"
once_cell = "1.19.0"
protobuf = "3.5.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
tokio = { version = "1.38.0", features = ["macros", "time", "rt"] }
tracing = "0.1.40"

[build-dependencies]
protobuf-codegen = "3.5.0"
protoc-bin-vendored = "3.0.0"
