[package]
name = "descriptor-mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
lotus-proto = { git = "https://github.com/trylotus/rust-lotus-proto.git", tag = "v1.0.0" }
once_cell = "1.19.0"
protobuf = "3.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
sse-client = "1.1.1"
tokio = { version = "1.38.0", features = ["macros", "time", "rt", "sync"] }
tracing = "0.1.40"


[features]
search = []
